--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,30 +1,11 @@
-```json
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "composite": true,
     "skipLibCheck": true,
+    "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "strict": false,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true
   },
-  "include": [
-    "*/.ts",
-    "*/.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    ".vercel"
-  ]
+  "include": ["vite.config.ts"]
 }
-```
